// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render two column grid 1`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <p
            class="rowLabel"
            data-testid="test-label-1-label"
            style="text-align: right;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="test-label-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: right;"
          >
            1
          </div>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="row-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 2`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <p
            class="rowLabel"
            data-testid="test-label-1-label"
            style="text-align: right;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="test-label-1-value"
            style="text-align: right;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: right;"
          >
            1
          </div>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="row-1-value"
            style="text-align: right;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 3`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <p
            class="rowLabel"
            data-testid="test-label-1-label"
            style="text-align: left;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="test-label-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="gridItem"
      >
        <div
          class="column labelColumn"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: left;"
          >
            1
          </div>
        </div>
        <div
          class="column"
          data-testid="two-column-row-value"
        >
          <div
            class=""
            data-testid="row-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
